# storage/api-docs/api-docs.json
@@ -12,50 +12,46 @@
                 ],
                 "summary": "Register a new user",
                 "operationId": "d764dd091cc4494ae0baf360b03319f3",
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "User's name",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "User's email",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "User's password",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password_confirmation",
-                        "in": "query",
-                        "description": "Password confirmation",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password",
+                                    "password_confirmation"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "David Beckham"
+                                    },
+                                    "email": {
+                                        "type": "email",
+                                        "example": "beckham@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "passBeckhamBall001"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string",
+                                        "example": "passBeckhamBall001"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "201": {
                         "description": "User registered successfully"
                     },
                     "422": {
-                        "description": "Validation errors"
+                        "description": "Validation error"
                     }
                 }
             }
@@ -67,26 +63,30 @@
                 ],
                 "summary": "Authenticate user and generate JWT token",
                 "operationId": "8dcb70df1020986038d098cc08d05dae",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "User's email",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "User's password",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "email",
+                                        "example": "beckham@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "passBeckhamBall001"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Login successful"
@@ -107,6 +107,9 @@
                 "responses": {
                     "200": {
                         "description": "Success"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to invalid token or expired token)"
                     }
                 },
                 "security": [
@@ -126,6 +129,9 @@
                 "responses": {
                     "200": {
                         "description": "Success"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to invalid token or expired token)"
                     }
                 },
                 "security": [
@@ -145,6 +151,207 @@
                 "responses": {
                     "200": {
                         "description": "Success"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to invalid token or expired token)"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/blog/blogs": {
+            "get": {
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Get all blogs for authenticated user",
+                "operationId": "6cbf8407adc5dbb1013c77e63e0fa5a1",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to token invalid or expired)"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Create a new blog",
+                "operationId": "a375c8d9e9efa4ac03ea165338f419ec",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "How to mengulor"
+                                    },
+                                    "body": {
+                                        "type": "text",
+                                        "example": "First, go make coffee"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Blog created successfully"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to token invalid or expired)"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/blog/blogs/{id}": {
+            "get": {
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Get specific blog by id for authenticated user",
+                "operationId": "8921fb876d611d223bef41eb95ddbb8c",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the record",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to token invalid or expired)"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Update blog by id",
+                "operationId": "0ad20e3f9fc5415858c751af091fe394",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the record",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "How to pura-pura busy"
+                                    },
+                                    "body": {
+                                        "type": "text",
+                                        "example": "Open as many terminals as possible"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to token invalid or expired)"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Delete blog by id",
+                "operationId": "ed8807adf737a00617bb3fd571b80f52",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the record",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "405": {
+                        "description": "Method not allowed (Due to token invalid or expired)"
                     }
                 },
                 "security": [
